# lab06

./: README.md
.github/workflows/: build.yml  deb_package.yml  dmg_package.yml  rpm_package.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: .CMakeLists.txt.un~  CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
